--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>daily check-in</title>
   </head>
-  <body>
+  <body style="background: linear-gradient(10deg, #9bf6ff  33%, rgba(0, 0, 0, 0) 33%), linear-gradient(290deg, #ffc6ff 66%, #ffd6a5 66%)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
