--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,20 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="description" content="Daily Check" />
+    <meta name="title" property="og:title" content="Daily Check" />
+    <meta property="og:type" content="Website" />
+    <meta 
+      name="image" 
+      property="og:image" 
+      content="" 
     />
+    <meta 
+      name="description" 
+      property="og:description" 
+      content="A mood tracker built with React and Axios that uses Google Forms as an API."
+      />
+    <meta name="author" content="Katarzyna Wegrzynowicz" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
