--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta 
       name="image" 
       property="og:image" 
-      content="" 
+      content="https://raw.githubusercontent.com/katarzyna-kw/daily-check/main/public/daily-check.png" 
     />
     <meta 
       name="description" 
