--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Oswald:wght@600&family=Petit+Formal+Script&family=Roboto:wght@100;400;500&family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Petit+Formal+Script&family=Roboto:wght@100;400;500&family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
     <title>daily check-in</title>
   </head>
   <body style="background: linear-gradient(50deg, #9bf6ff  33%, rgba(122, 58, 58, 0) 33%), linear-gradient(50deg, #ffc6ff 66%, #ffd6a5 66%)">
